--- a/src/app/registration/register.module.css
+++ b/src/app/registration/register.module.css
@@ -32,68 +32,39 @@
 }
 
 .wrapperTop p{
-  margin: 15px 0 20px 0;
+  margin: 15px 0 0 0;
   font-size: 15px;
   color: #444242bb;
 }
 
 
-
-.userInput .inputBox{
-  width: 99%;
+.userInput input{
+  width: 80%;
   border: 1px solid orange;
+  outline: none;
   border-radius: 10px;
-  margin-bottom: 10px;
+  padding: 16px 30px 16px 37px;
+  margin-bottom: -10px;
 }
 
-.inputBox input{
-  width: 89%;
-  height: 100%;
-  padding: 15px;
-  padding-left: 37px;
-  border: none;
-  background: transparent;
-  outline: none;
-}
-
-.inputBox input[type=password]{
-  width: 89%;
-  height: 100%;
-  padding: 15px 50px 15px 37px;
-  border: none;
-  background: transparent;
-  outline: none;
-}
-
-.inputBox .iconUser{
-  position: absolute;
-  top: 34.5%;
-  left: 26%;
+.userInput .icon{
+  position: relative;
+  top: 39px;
+  left: 10px;
   font-size: 19px;
   color: rgb(231, 157, 18);
 }
 
-.inputBox .iconEmail{
-  position: absolute;
-  top: 43.8%;
-  left: 26%;
-  font-size: 19px;
-  color: rgb(231, 157, 18);
-}
-
-.inputBox .iconLock{
-  position: absolute;
-  top: 52.4%;
-  left: 26%;
-  font-size: 19px;
-  color: rgb(231, 157, 18);
-}
 
 .eyeIcon{
-  position: absolute;
-  top: 54.5%;
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+  bottom: 17px;
+  left: 300px;
+  right: 10px;
+  max-width: 30px;
   font-size: 18px;
-  right: 26%;
   transform: translateY(-50%);
   cursor: pointer;
   color: #222;
@@ -104,7 +75,6 @@
 }
 
 .signupBtn{
-  margin-top: 10px;
   width: 100%;
   padding: 18px;
   color: #222;
@@ -175,6 +145,14 @@
 .socialBtn button:hover{
   transform: scale(0.95);
 }
+
+.socialBtn span{
+  margin: 0 10px 0 0;
+  font-size: 20px;
+  position: relative;
+  top: 5px;
+}
+
 
 .login{
   text-align: center;
